--- a/impressum.html
+++ b/impressum.html
@@ -27,7 +27,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Robert-Blum-Straße 21, 51373 Leverkusen <br> <br> </p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> XXX<br> <strong></strong> <br> <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@kammerjaeger-melcher.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>   Manfred Melcher
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Adresse:</strong><br> Robert-Blum-Straße 21, 51373 Leverkusen <br> <br> </p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> XXX<br> <strong></strong> <br> <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@kammerjaeger-melcher.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>   Manfred Melcher
   
   
   
